- optimizirana serijalizacija
git-svn-id: http://morgoth.zemris.fer.hr/svn/vhdllab/vhdllab/trunk/vhdllab@787 cbae1e92-611c-0410-ab7b-b19ac7dee622